# WordClock-NG

./: .gitignore  README.md  animations.ino  boards.local.txt  code.ino  icon_editor.html  settings.h  weather.ino  weather_icons.h  webui.h
libraries/Adafruit_NeoPixel/: esp.c
libraries/ArduinoJson/: CHANGELOG.md  CMakeLists.txt  appveyor.yml  idf_component.yml
libraries/ArduinoJson/extras/scripts/wandbox/: JsonGeneratorExample.cpp  JsonParserExample.cpp  MsgPackParserExample.cpp
libraries/ArduinoJson/extras/tests/: CMakeLists.txt
libraries/ArduinoJson/extras/tests/Cpp17/: string_view.cpp
libraries/ArduinoJson/extras/tests/FailingBuilds/: CMakeLists.txt  Issue1189.cpp  Issue978.cpp  assign_char.cpp  delete_jsondocument.cpp  read_long_long.cpp  variant_as_char.cpp  write_long_long.cpp
libraries/ArduinoJson/extras/tests/IntegrationTests/: gbathree.cpp  issue772.cpp  openweathermap.cpp  round_trip.cpp
libraries/ArduinoJson/extras/tests/JsonArray/: CMakeLists.txt  add.cpp  clear.cpp  compare.cpp  copyArray.cpp  createNested.cpp  equals.cpp  isNull.cpp  iterator.cpp  memoryUsage.cpp  nesting.cpp  remove.cpp  size.cpp  std_string.cpp  subscript.cpp  unbound.cpp
libraries/ArduinoJson/extras/tests/JsonDeserializer/: CMakeLists.txt  array.cpp  array_static.cpp  filter.cpp  incomplete_input.cpp  input_types.cpp  invalid_input.cpp  misc.cpp  nestingLimit.cpp  number.cpp  object.cpp  string.cpp  (+1 more)
libraries/ArduinoJson/extras/tests/MemoryPool/: CMakeLists.txt  StringCopier.cpp  allocVariant.cpp  clear.cpp  saveString.cpp  size.cpp
libraries/ESPUI/src/: dataStyleCSS.h
(+108 files in other folders)
